Fixed layout issues

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -12,7 +12,7 @@ html {
 
 html, body, #app {
     height: 100vh;
-    width: 100vw;
+    // width: 100vw;
 }
 
 body {
